test/data/check-unsupported.test
-- Tests for unsupported features


[case testSetLiteral]
{None} # E: Feature not implemented yet (set literal)

[case testConditionalExpression]
a = None if None else None
[out]
main, line 1: Feature not implemented yet (conditional expression) 

[case testWith]
void f():
  with None:
    pass
[out]
main: In function "f":
main, line 2: Feature not implemented yet (with statement)

[case testNestedClass]
def f():
    class A: pass    
class B:
    class C: pass
    def f(self):
        class D: pass
[out]
main: In function "f":
main, line 2: Nested classes not supported yet
main: At top level:
main, line 4: Nested classes not supported yet
main: In function "f":
main, line 6: Nested classes not supported yet

[case testChainedAssignment]
x = y = object
def f():
    x = y = object
class A:
    x = y = object
[out]
main, line 1: Feature not implemented yet (chained assignment)
main: In function "f":
main, line 3: Feature not implemented yet (chained assignment)
main: In class "A":
main, line 5: Feature not implemented yet (chained assignment)

[case testClassAttributeAccessInTypeDeclaration]
class A:
  any x
  def f(self): pass
A.x y
[out]
main, line 4: Feature not implemented yet (class attributes)

[case testDecorateOverloadedFunction]
# The error messages are not the most informative ever.
def d(x): pass
@d
def f(): pass
def f(x): pass
def g(): pass
@d
def g(x): pass
[out]
main, line 5: Name 'f' already defined
main, line 7: Name 'g' already defined
